--- a/style.css
+++ b/style.css
@@ -113,3 +113,30 @@ hr{
     padding-left: 15px;
     padding-top: 1px;
 }
+/* -------------------------------- 
+    media quories or responsive
+--------------------------------     */
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog,{
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+/* tablet devices */
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container{
+        width: 90%;
+    }
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1, 1fr);
+    }  
+}
