--- a/style.css
+++ b/style.css
@@ -1,6 +1,34 @@
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 /* utilitis */
+header{ 
+    Height: 94px;
+    background-color: #562EFF;
+}
+.half-width img{
+    height: 56px;  
+}
+.nav-bar{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 10px;
+}
+.nav-bar a{
+    text-decoration: none;
+    color:white;    
+}
+.half-width{
+    display: flex;
+    align-items: center;
+    
+}
+.half-width a{
+    padding-right: 20px;
+}
+.half-width h1{
+    padding-left: 20px;
+    color:white;
+}
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
@@ -116,27 +144,24 @@ hr{
 /* -------------------------------- 
     media quories or responsive
 --------------------------------     */
-@media only screen and (max-width:688px) {
+ @media only screen and (max-width:688px) {
     .container{
         width: 100%;
     }
     .players, .blogs .courses{
         grid-template-columns: repeat(1, 1fr);
     }
-    .player, .blog,{
+    .player, .blog{
         flex-direction: column;
         justify-content: center;
     }
 }
-/* tablet devices */
+ /* tablet devices*/
 @media only screen and (min-width:688px) and (max-width:992px) {
     .container{
-        width: 90%;
+        width: 100%;
     }
     .players, .courses{
         grid-template-columns: repeat(2, 1fr);
     }
-    .blogs{
-        grid-template-columns: repeat(1, 1fr);
-    }  
 }
